--- a/README.org
+++ b/README.org
@@ -4,7 +4,7 @@ An Org Babel library for sending prompts to an already running Aider.el or Aider
 
 ** Overview
 
-=ob-aider.el= allows you to interact with [[https://github.com/tninja/aider.el][aider.el]] or [[https://github.com/localredhead/aidermacs][Aidermacs]] directly from Org mode documents. This enables you to:
+=ob-aider.el= allows you to interact with [[https://github.com/tninja/aider.el][aider.el]] or [[https://github.com/MatthewZMD/aidermacs][Aidermacs]] directly from Org mode documents. This enables you to:
 
 - Document your AI-assisted coding sessions in Org mode
 - Send prompts to Aider from within your Org documents
@@ -90,9 +90,9 @@ Then run =doom sync= to install the package.
 2. In your Org document, create an Aider source block:
 
    #+begin_example
-   #+begin_src aider
-   Please refactor this function to be more efficient...
-   #+end_src
+   ,#+begin_src aider
+     Please refactor this function to be more efficient...
+   ,#+end_src
    #+end_example
 
 3. Execute the block with =C-c C-c= to send the prompt to the active Aider session.
